--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -40,35 +40,22 @@ nav a {
   padding: 10px;
   text-decoration: none;
   color: white;
-  border: 2px solid transparent;
+  border: 2px solid white;
   border-radius: 10px;
   transition: all 0.4s;
   font-size: 18px;
   font-weight: 600;
 }
 nav a:hover {
-  border: 2px solid white;
+  background-color: #b3240b;
 }
 nav i {
   margin-right: 10px;
   transition: all 0.4s;
 }
-nav .fa-arrow-circle-left {
-  font-size: 25px;
-  color: transparent;
-  transition: all 0.4s;
-}
-nav .fa-bars {
-  display: none;
-}
 
 .link {
   display: flex;
-}
-
-.search {
-  display: flex;
-  justify-content: center;
 }
 
 @media only screen and (max-width: 767px) {
@@ -127,6 +114,7 @@ footer p {
   align-items: flex-start;
   margin-right: 50px;
   flex-shrink: 0;
+  padding-right: 5px;
 }
 
 .row-foot {
@@ -175,10 +163,6 @@ footer p {
   .nav-foot {
     flex-direction: column;
   }
-
-  /*.about { 
-      margin-left: 50px;
-  }*/
 }
 h1 {
   font-size: 32px;
@@ -198,6 +182,15 @@ h2 {
   text-align: center;
 }
 
+@media only screen and (max-width: 767px) {
+  h1 {
+    font-size: 24px;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+}
 #cart {
   margin: 60px 50px 200px 50px;
   border-radius: 15px;
@@ -510,7 +503,7 @@ label {
 #teddies img {
   object-fit: cover;
   width: 100%;
-  height: 250px;
+  height: 80%;
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
 }
@@ -523,9 +516,14 @@ label {
   margin: 0 30px 0 0;
 }
 
-@media only screen and (max-width: 767px) {
-  #teddies img {
-    height: 300px;
+@media only screen and (max-width: 399px) {
+  #teddies img, #only img {
+    height: 200px;
+  }
+}
+@media only screen and (min-width: 400px) and (max-width: 767px) {
+  #only img {
+    height: 30%;
   }
 }
 
