--- a/frontend/sass/components/_image.scss
+++ b/frontend/sass/components/_image.scss
@@ -1,7 +1,7 @@
 #teddies img {
     object-fit: cover;
     width: 100%;
-    height: 250px;
+    height: 80%;
     border-top-right-radius: 15px;
     border-top-left-radius: 15px;
 }
@@ -15,9 +15,16 @@
 
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 399px) {
 
-   #teddies img {
-       height: 300px;
+   #teddies img, #only img {
+       height: 200px;
    }
+}
+
+@media only screen and (min-width: 400px) and (max-width: 767px) {
+
+    #only img {
+        height: 30%;
+    }
 }
