--- a/frontend/sass/pages/_index.scss
+++ b/frontend/sass/pages/_index.scss
@@ -1,10 +1,8 @@
-h1 {
-    
+h1 {   
     font-size: 32px;
     text-align: center;
     color: rgb(70, 70, 131);
-    margin: 50px 0 50px 0;
-    
+    margin: 50px 0 50px 0;   
 }
 
 h2 {
@@ -12,11 +10,19 @@ h2 {
     color: rgb(70, 70, 131);
 }
 
-
-
-
 .errorIndex {
     margin-top: 100px;
     font-size: 20px;
     text-align: center;
+}
+
+@media only screen and (max-width: 767px) {
+
+    h1 {
+        font-size: 24px;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
 }
