--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -414,7 +414,8 @@ input:valid {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 0 10px 0 10px;
+  margin: 15px 15px 0 15px;
+  font-weight: bold;
 }
 
 #only {
