--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -33,7 +33,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 0 10px 0 10px;
+    margin: 15px 15px 0 15px;
+    font-weight: bold;
 }
 
 // *** One teddy ***
