--- a/frontend/sass/main.scss
+++ b/frontend/sass/main.scss
@@ -5,6 +5,6 @@
 @import "./pages/cart";
 @import "./pages/confirmation";
 @import "./components/article";
-//@import "./components/loader";
+@import "./components/info";
 @import "./utils/variables";
 @import "./components/image";
