--- a/frontend/sass/pages/_cart.scss
+++ b/frontend/sass/pages/_cart.scss
@@ -177,9 +177,8 @@ input:valid {
 
 @media only screen and (max-width: 799px) {
 
-    /*.infoAdd {
-        position: relative;
-        bottom: 0;
-        left: 50%;
-    } */
+   #cart {
+       padding-bottom: 150px;
+   }
+
 }
