--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -555,7 +555,7 @@ label {
 #only img {
   object-fit: cover;
   width: 100%;
-  height: 400px;
+  height: 30%;
   border-radius: 15px;
   margin: 0 30px 0 0;
 }
