--- a/frontend/sass/components/_image.scss
+++ b/frontend/sass/components/_image.scss
@@ -9,7 +9,7 @@
 #only img {
     object-fit: cover;
     width: 100%;
-    height: 400px;
+    height: 30%;
     border-radius: 15px;
     margin: 0 30px 0 0;
 
