--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -556,6 +556,7 @@ label {
   object-fit: cover;
   width: 100%;
   height: 30%;
+  max-height: 700px;
   border-radius: 15px;
   margin: 0 30px 0 0;
 }
