--- a/frontend/sass/components/_image.scss
+++ b/frontend/sass/components/_image.scss
@@ -10,6 +10,7 @@
     object-fit: cover;
     width: 100%;
     height: 30%;
+    max-height: 700px;
     border-radius: 15px;
     margin: 0 30px 0 0;
 
