responsive product img

--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -112,6 +112,7 @@ label {
     #only {
         display: flex;
         flex-direction: column;
+        max-width: 1200px;
         padding-bottom: 280px;
         select, input {
             padding: 10px;
