--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -479,6 +479,7 @@ label {
   #only {
     display: flex;
     flex-direction: column;
+    max-width: 1200px;
     padding-bottom: 280px;
   }
   #only select, #only input {
