responsive product img

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -430,7 +430,7 @@ input:valid {
   padding: 20px;
   border-radius: 15px;
   font-weight: bold;
-  width: 50%;
+  max-width: 600px;
 }
 
 label {
@@ -488,7 +488,6 @@ label {
 
   #text {
     margin-top: 20px;
-    width: 100%;
   }
 }
 @media only screen and (min-width: 600px) and (max-width: 799px) {
@@ -508,7 +507,6 @@ label {
 
   #text {
     margin-top: 20px;
-    width: 100%;
   }
 }
 .new {
