--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -388,6 +388,8 @@ input:valid {
   flex-direction: column;
   text-decoration: none;
   color: white;
+  max-width: 425px;
+  max-height: 300px;
   background-color: #464683;
   border: 1px solid transparent;
   border-radius: 15px;
