--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -11,6 +11,8 @@
         flex-direction: column;
         text-decoration: none;
         color: white;
+        max-width: 425px;
+        max-height: 300px;
        // background-color: rgb(80, 9, 1);
        background-color: rgb(70, 70, 131);
         border: 1px solid transparent;
