--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -380,8 +380,8 @@ input:valid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 20px;
-  margin: 50px;
-  padding-bottom: 100px;
+  margin: 50px auto;
+  padding: 0 50px 100px 50px;
   max-width: 1200px;
 }
 #teddies a {
