--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -4,8 +4,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
-    margin: 50px;
-    padding-bottom: 100px;
+    margin: 50px auto;
+    padding: 0 50px 100px 50px;
     max-width: 1200px;
     a {
         display: flex;
