--- a/frontend/sass/components/_info.scss
+++ b/frontend/sass/components/_info.scss
@@ -1,5 +1,6 @@
 .new {
-    animation: bg 3s ease-in-out;
+    animation: bg 2.5s ease-in-out;
+    
 }
 
 
@@ -11,15 +12,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    //background-color: white;
-    
+    background-color: transparent;
     opacity: 0;
     p {
         font-size: 18px;
         display: flex;
         z-index: 0;
         color: white;
-        opacity: 0.8;
+        opacity: 1;
         border: 3px solid rgb(70, 70, 131);
         border-radius: 15px;
         padding: 100px;
@@ -29,17 +29,4 @@
 
 
 
-@keyframes bg {
-    0% {
-        opacity: 0;
-        z-index: 9998;
-    }
-    20% {
-        opacity: 1;
-        z-index: 9998;
-    }
-    100% {
-        opacity: 0;
-        z-index: 9998;
-    }
-}
+
