--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -7,6 +7,8 @@
     margin: 50px auto;
     padding: 0 50px 100px 50px;
     max-width: 1200px;
+    
+    animation: fadein 1.5s ease-in-out;
     a {
         display: flex;
         flex-direction: column;
@@ -31,6 +33,8 @@
     }     
 }
 
+
+
 #textTeddies {
     display: flex;
     align-items: center;
@@ -50,6 +54,7 @@
     padding-bottom: 150px;
     margin-bottom: 50px;
     max-width: 1200px;
+    animation: fadein 1.5s ease-in-out;
 }
 
 #text {
@@ -84,6 +89,12 @@ label {
         color: white;
         border-radius: 10px;
         text-align: center;
+        box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.3);
+        transition: all 0.3s ease-in-out;
+        &:hover {
+            background-color: rgb(157, 17, 185);
+            box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.8);
+        }
     }  
 }
 
@@ -97,8 +108,11 @@ label {
     text-align: center;
     cursor: pointer;
     background-color: rgb(70, 70, 131);
+    box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.3);
+    transition: all 0.3s ease-in-out;
     &:hover {
         background-color: rgb(47, 180, 34);
+        box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.8);
     } 
 }
 
