--- a/frontend/sass/main.scss
+++ b/frontend/sass/main.scss
@@ -6,5 +6,7 @@
 @import "./pages/confirmation";
 @import "./components/article";
 @import "./components/info";
+@import "./components/up";
 @import "./utils/variables";
+@import "./utils/keyframes";
 @import "./components/image";
