--- a/frontend/sass/pages/_confirmation.scss
+++ b/frontend/sass/pages/_confirmation.scss
@@ -1,19 +1,24 @@
 #terminate {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
     text-align: center;
-    margin: 120px 20px 50px 20px;
+    margin: 50px auto;
+    margin-bottom: 200px;
     border: 1px solid rgb(90, 9, 1);
     border-radius: 15px;
     padding: 20px 0 20px 0;
+    h1, h2, p {
+        margin: 5px ;
+    }
 }
 
-#confirm, #result {
-margin-bottom: 20px;
-}
+
 
 @media only screen  and (max-width: 767px) {
 
     #terminate {
-        margin: 40px 15px 350px 15px;
+        margin-bottom: 280px;
         font-size: 15px;
     }
 }
