--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -58,6 +58,17 @@ nav i {
   display: flex;
 }
 
+.qty {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: fuchsia;
+  color: white;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+}
+
 @media only screen and (max-width: 767px) {
   header {
     padding: 0;
@@ -261,6 +272,10 @@ h2 {
 form {
   display: flex;
 }
+form input:valid {
+  border: 1px solid green;
+  background-color: #96eba4;
+}
 
 #infoCart {
   text-align: center;
@@ -350,11 +365,6 @@ form {
 
 .badEmail {
   background-color: red;
-}
-
-input:valid {
-  border: 1px solid green;
-  background-color: #96eba4;
 }
 
 @media only screen and (max-width: 799px) {
