--- a/frontend/sass/layouts/_header.scss
+++ b/frontend/sass/layouts/_header.scss
@@ -45,6 +45,18 @@ nav {
     display: flex;
 }
 
+.qty {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(255, 0, 255);
+    color:white;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+ 
+}
+
 @media only screen and (max-width: 767px) {
 
     header {
