--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -33,8 +33,6 @@
     }     
 }
 
-
-
 #textTeddies {
     display: flex;
     align-items: center;
@@ -54,7 +52,7 @@
     padding-bottom: 150px;
     margin-bottom: 50px;
     max-width: 1200px;
-    animation: fadein 1.5s ease-in-out;
+    animation: fadeinOne 1.5s ease-in-out;
 }
 
 #text {
