--- a/frontend/sass/utils/_keyframes.scss
+++ b/frontend/sass/utils/_keyframes.scss
@@ -11,6 +11,17 @@
     }
 }
 
+@keyframes fadeinOne {
+    0% {
+        opacity: 0;
+    }
+    100% { 
+        opacity: 1;
+    }
+}
+
+
+
 @keyframes bg {
     0% {
         opacity: 0;
